# NyxI

./: .env.example  .gitignore  Cargo.toml  IDENTITY.md  README.md  first_run_local.sh
agents/: base.py  code.py  research.py
src/: autonomy.rs  awareness.rs  built_tools_registry.rs  consciousness.rs  constitution.rs  db.rs  embed.rs  file_provenance.rs  filewatcher.rs  forge.rs  intent.rs  interaction.rs  lib.rs  llm.rs  main.rs  mcp.rs  overnight.rs  patterns.rs  plugins.rs  runtime.rs  runtime_instance.rs  soul.rs  swarm.rs  tools.rs  twitter.rs  voice.rs  web.rs
src/autonomy/: dispatch_world.rs  execution.rs  failure.rs  promote.rs  retry.rs
src/db/: autonomy_store.rs  legacy_memory_store.rs  memory_capsules.rs  memory_maintenance.rs  memory_model.rs  memory_queries.rs  memory_recall.rs  policy_learning.rs  records.rs  schema.rs  shared.rs  state_store.rs  support_store.rs  telemetry_store.rs  trace_store.rs
src/forge/: built_tools.rs  evolve_planning.rs  helpers.rs  protected_evolve.rs  sandbox.rs  tool_build.rs
src/improvement/: distill.rs  experiments.rs  mod.rs  policy.rs  replay.rs
src/runtime/: autonomy_hooks.rs  browser_session.rs  chat.rs  delegation.rs  fast_paths.rs  memory.rs  self_model.rs  verifier.rs
src/web/: runtime_surfaces.rs  self_model_api.rs
src/world/: brief.rs  continuity.rs  follow_up.rs  mod.rs  projects.rs  state.rs
static/: index.html
tools/: browser.py  browser_daemon.py  computer_use.py  file_ops.py  gif.py  git_info.py  github.py  image_gen.py  transcribe.py  twitter.py  vision.py  weather.py  web_search.py
(+10 files in other folders)
