[package]
name = "nyx"
version = "2.1.0"
edition = "2024"

[[bin]]
name = "nyx"
path = "src/main.rs"

[[bin]]
name = "longmemeval_benchmark"
path = "benchmarks/bin/longmemeval_benchmark.rs"

[[bin]]
name = "memory_benchmark"
path = "benchmarks/bin/memory_benchmark.rs"

[lib]
name = "nyx"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled", "bundled-full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dashmap = "6"
async-trait = "0.1"
anyhow = "1"
libc = "0.2"
regex = "1"
base64 = "0.22"
notify = "7"
toml = "0.8"
syn = { version = "2", features = ["full"] }
rmcp = { version = "0.1", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
schemars = "1.0"
# Voice (optional — enable with NYX_VOICE_ENABLED=true)
cpal = "0.17"
hound = "3.5"
# Channels
teloxide = { version = "0.17", features = ["macros"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

[profile.release]
opt-level = 3
lto = true
